--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,19 @@
 services:
   feedback-analytics-consumer:
-    build: .
+    image: maven:3.9.11-eclipse-temurin-25-alpine
     ports:
       - "8081:8081"
+    volumes:
+      - .:/app
+      - maven-cache:/root/.m2
+    working_dir: /app
+    command: mvn clean package spring-boot:run
     networks:
       - stanjgcnet
 
+volumes:
+  maven-cache:
+      
 networks:
   stanjgcnet:
     driver: bridge
