--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,27 @@
 spring.application.name=feedback-analytics-consumer
 server.port=8081
 server.address=0.0.0.0
+
+spring.kafka.bootstrap-servers=kafka:29092
+#spring.kafka.consumer.group-id=feedback-analytics-group
+#spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+#spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
+#spring.kafka.consumer.properties.spring.json.trusted.packages=*
+
+spring.kafka.consumer.group-id=feedback-analytics-group
+spring.kafka.consumer.auto-offset-reset=earliest
+
+spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.ErrorHandlingDeserializer
+
+# ErrorHandlingDeserializer wraps the JsonDeserializer
+spring.kafka.consumer.properties.spring.deserializer.value.delegate.class=org.springframework.kafka.support.serializer.JsonDeserializer
+
+# Use the consumer-side DTO
+spring.kafka.consumer.properties.spring.json.value.default.type=com.joey.stanley.group.project.feedback_analytics_consumer.dtos.FeedbackSubmittedEvent
+
+# We are NOT using producer type headers
+spring.kafka.consumer.properties.spring.json.use.type.headers=false
+
+# Trust all packages for JSON
+spring.kafka.consumer.properties.spring.json.trusted.packages=*
