--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,8 +11,8 @@ spring.kafka.bootstrap-servers=kafka:29092
 spring.kafka.consumer.group-id=feedback-analytics-group
 spring.kafka.consumer.auto-offset-reset=earliest
 
-spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
-spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.ErrorHandlingDeserializer
+spring.kafka.consumer.key-deserializer= org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer= org.springframework.kafka.support.serializer.JsonDeserializer
 
 # ErrorHandlingDeserializer wraps the JsonDeserializer
 spring.kafka.consumer.properties.spring.deserializer.value.delegate.class=org.springframework.kafka.support.serializer.JsonDeserializer
